--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,11 @@ services:
       - chrome
     volumes:
       - ./src:/src
-      - node_modules:/src/node_modules
+      - node_modules:/src/{AppName}/node_modules
     ports:
       - 3000:3000
     networks:
       - backend
-    deploy:
-      replicas: 1
     environment:
       - "HOST=localhost:3000"
       - "CHROME_URL=http://chrome:3333/webdriver"
@@ -29,7 +27,7 @@ services:
         max-file: "5"
     tty: true
     stdin_open: true
-    command: dotnet watch run --project="WebApp/WebApp.csproj" --urls=http://0.0.0.0:3000/
+    command: dotnet watch run --project="{AppName}/{AppName}.csproj" --urls=http://0.0.0.0:3000/
     #command: rdebug-ide --debug --host 0.0.0.0 --port 1234 -- bin/rails s -p 3000 -b 0.0.0.0
   redis:
     image: redis:6.2-alpine
@@ -42,10 +40,6 @@ services:
       options:
         max-size: "5m"
         max-file: "5"
-    deploy:
-      placement:
-        constraints: [node.role == manager]
-      replicas: 1
   db:
     image: postgres:14-alpine
     volumes:
